# wave-function-collapse

./: Makefile  pyproject.toml
waves/: __main__.py  terminal.py  util.py
