[tool.poetry]
name = "waves"
version = "0.1.0"
description = ""
authors = ["Raphael Nepomuceno <rphln@users.noreply.github.com>"]

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
numpy = "^1.22.3"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
